--- a/obs/stage.css
+++ b/obs/stage.css
@@ -13,12 +13,12 @@ body {
   font-size: 56px;
 }
 #wrapper {
-  display: flex;
+  /*display: flex;*/
   padding: 2rem;
   align-items: center;
   justify-content: space-around;
   /*background-color: rgba(37, 96, 139, .75);*/
-  background: linear-gradient(90deg, transparent, rgba(26, 63, 89, .45) 10%, rgba(26, 63, 89, .95), rgba(26, 63, 89, .45) 90%, transparent);
+  background: linear-gradient(90deg, transparent 15%, rgba(26, 63, 89, .75) 45%, rgba(26, 63, 89, .85), rgba(26, 63, 89, .75) 55%, transparent 85%);
   border-radius: 0.5rem;
   width: 100%;
   /*box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);*/
@@ -26,11 +26,17 @@ body {
   margin-left: auto;
   height: 5em;
 }
+#wrapper.show {
+  display:flex;
+}
+#wrapper.hide {
+  display: none;
+}
 
 #currentslide {
   text-align: center;
   color: white;
-  text-shadow: 0 10px 15px rgba(0, 0, 0, 0.3);
+  text-shadow: 0 0px 10px rgba(0, 0, 0, 0.9);
 }
 
 .title {
